# wallpaper-rs

./: Cargo.toml  README.md  appveyor.yml  project.code-workspace
wallpaper-windows-shobjidl/examples/: wallpaper-shobjidl.rs
wallpaper-windows-shobjidl/src/: error.rs  lib.rs
wallpaper-windows-shobjidl/src/com/: init.rs
wallpaper-windows-user32/: Cargo.toml
wallpaper-windows-user32/src/: lib.rs
windows-shobjidl/: Cargo.toml
windows-shobjidl/examples/: wallpaper-shobjidl.rs
windows-shobjidl/src/: error.rs  lib.rs
windows-shobjidl/src/com/: desktop_wallpaper.rs  helpers.rs  mod.rs
windows-user32/: Cargo.toml
windows-user32/examples/: wallpaper-user32.rs
windows-user32/src/: error.rs  lib.rs
