[package]
name = "wallpaper-windows-user32"
version = "0.2.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Manipulate Windows desktop image via user32.dll."
keywords = ["windows", "wallpaper"]
categories = ["os::windows-apis"]
license = "MIT"
repository = "https://github.com/MOZGIII/wallpaper-rs"
documentation = "https://docs.rs/wallpaper-windows-user32"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
