[package]
name = "wallpaper-windows-shobjidl"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "Manipulate Windows desktop image via shell32.dll with shobjidl_core.h API."
keywords = ["windows", "wallpaper"]
categories = ["os::windows-apis"]
license = "MIT"
repository = "https://github.com/MOZGIII/wallpaper-rs"
documentation = "https://docs.rs/wallpaper-windows-shobjidl"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
winapi = { version = "0.3", features = ["combaseapi", "shobjidl_core", "objbase", "std", "debug", "winerror"] }
widestring = "0.4"

[dependencies.lazy_static]
version = "1.3"
optional = true

[features]
default = ["singleton"]
singleton = ["lazy_static"]
